# sky-agent

./: .env  Dockerfile  Dockerfile.atlassian  Dockerfile.sky-agent  README.md  chat_client.py  docker-compose.yml  pyproject.toml  requirements.txt  sky_agent.py  sky_swarm.py  start.sh  stop.sh  test_gcp_agent.py
mcp-servers/: Dockerfile.atlassian  Dockerfile.github  Dockerfile.mcp-proxy  entrypoint-atlassian.sh  entrypoint-mcp-proxy.sh  mcp-servers.json
mcp-servers/github/: pyproject.toml
mcp-servers/github/src/github_mcp_server/: __init__.py  __main__.py  proxy.py  server.py
src/: __init__.py  chat_client.py  main.py
src/prompts/: README.md  __init__.py  atlassian_agent.py  aws_agent.py  azure_agent.py  claude_code.py  coding_agent.py  gcp_agent.py  sky_agent.py
src/tools/: claude_code.py  use_azure.py  use_gcp.py
tools/: claude_code.py
