[project]
name = "github-mcp-server"
version = "0.1.0"
description = "GitHub MCP streamable-http wrapper"
requires-python = ">=3.13"
dependencies = [
    "fastmcp",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/github_mcp_server"]
